--- a/course-conquering-responsive-layouts/challenge05/style.css
+++ b/course-conquering-responsive-layouts/challenge05/style.css
@@ -13,114 +13,114 @@
 */
 
 :root {
-  --clr-primary: #23424a;
-  --clr-secondary: #136c72;
-  --clr-tertiary: #3a3a3a;
-  --pad-secondary: 2rem;
+	--clr-primary: #23424a;
+	--clr-secondary: #136c72;
+	--clr-tertiary: #3a3a3a;
+	--pad-secondary: 2rem;
 }
 
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 img {
-  max-width: 100%;
+	max-width: 100%;
 }
 
 body {
-  margin: 0;
-  font-family: "Roboto", sans-serif;
-  font-size: 1.3rem;
+	margin: 0;
+	font-family: 'Roboto', sans-serif;
+	font-size: 1.3rem;
 }
 
 img {
-  max-width: 100%;
+	max-width: 100%;
 }
 
 h1 {
-  font-size: 3rem;
-  margin-top: 0;
+	font-size: 3rem;
+	margin-top: 0;
 }
 
 .container {
-  width: 80%;
-  max-width: 1100px;
-  margin: 0 auto;
+	width: 80%;
+	max-width: 1100px;
+	margin: 0 auto;
 }
 
 .row {
-  /* display: flex => flex container */
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  /* can't use yet */
-  /* gap: 100px; */
+	/* display: flex => flex container */
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	/* can't use yet */
+	/* gap: 100px; */
 }
 
 .col {
-  /* these are now flex items */
-  width: 100%;
+	/* these are now flex items */
+	width: 100%;
 }
 
 .col + .col {
-  margin-left: 30px;
+	margin-left: 30px;
 }
 
 .clr-secondary {
-  color: var(--clr-secondary);
+	color: var(--clr-secondary);
 }
 
 .container-right {
-  color: #fff;
-  background-color: var(--clr-secondary);
-  padding: var(--pad-secondary);
-  /* background: red; */
-  margin: 2rem 0;
+	color: #fff;
+	background-color: var(--clr-secondary);
+	padding: var(--pad-secondary);
+	/* background: red; */
+	margin: 2rem 0;
 }
 
 .hero {
-  padding: 100px 0;
-  background-color: var(--clr-primary);
-  color: #fff;
+	padding: 100px 0;
+	background-color: var(--clr-primary);
+	color: #fff;
 }
 
 .center {
-  text-align: center;
+	text-align: center;
 }
 
 .container-left {
-  color: var(--clr-tertiary);
-  padding: var(--pad-secondary);
-  text-align: left;
+	color: var(--clr-tertiary);
+	padding: var(--pad-secondary);
+	text-align: left;
 }
 
 .hero__text {
-  width: 62%;
+	width: 62%;
 }
 
 .hero__img {
-  width: 32%;
-  align-self: flex-start;
+	width: 32%;
+	align-self: flex-start;
 }
 
 .hero p {
-  margin-bottom: 3em;
+	margin-bottom: 3em;
 }
 
 .btn {
-  display: inline-block;
-  text-decoration: none;
-  text-transform: uppercase;
-  color: #23424a;
-  font-weight: 900;
-  background-color: #38cfd9;
-  padding: 0.75em 2em;
-  border-radius: 100px;
+	display: inline-block;
+	text-decoration: none;
+	text-transform: uppercase;
+	color: #23424a;
+	font-weight: 900;
+	background-color: #38cfd9;
+	padding: 0.75em 2em;
+	border-radius: 100px;
 }
 
 .btn:hover,
 .btn:focus {
-  opacity: 0.75;
+	opacity: 0.75;
 }
