--- a/course-conquering-responsive-layouts/challenge06/style.css
+++ b/course-conquering-responsive-layouts/challenge06/style.css
@@ -11,131 +11,130 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 body {
-  margin: 0;
-  font-family: "Roboto", sans-serif;
-  font-size: 1.3rem;
+	margin: 0;
+	font-family: 'Roboto', sans-serif;
+	font-size: 1.3rem;
 }
 
 img {
-  max-width: 100%;
+	max-width: 100%;
 }
 
 h1 {
-  font-size: 3rem;
-  margin-top: 0;
+	font-size: 3rem;
+	margin-top: 0;
 }
 
 .section-title {
-  color: #87629a;
+	color: #87629a;
 }
 
 .btn {
-  display: inline-block;
-  text-decoration: none;
-  text-transform: uppercase;
-  color: #23424a;
-  font-weight: 900;
-  background-color: #38cfd9;
-  padding: 0.75em 2em;
-  border-radius: 100px;
+	display: inline-block;
+	text-decoration: none;
+	text-transform: uppercase;
+	color: #23424a;
+	font-weight: 900;
+	background-color: #38cfd9;
+	padding: 0.75em 2em;
+	border-radius: 100px;
 }
 
 .btn:hover,
 .btn:focus {
-  opacity: 0.75;
+	opacity: 0.75;
 }
 
 .container {
-  width: 80%;
-  max-width: 1100px;
-  margin: 0 auto;
+	width: 80%;
+	max-width: 1100px;
+	margin: 0 auto;
 }
 
 .row {
-  display: flex;
-  justify-content: space-between;
+	display: flex;
 }
 
 .col {
-  /* these are now flex items */
-  width: 100%;
+	/* these are now flex items */
+	width: 100%;
 }
 
 .col + .col {
-  margin-left: 30px;
+	margin-left: 30px;
 }
 
 header {
-  background: #136c72;
-  padding: 0.5em 0;
+	background: #136c72;
+	padding: 0.5em 0;
 }
 
 .nav__list {
-  margin: 0;
-  padding: 0;
-  list-style: none;
+	margin: 0;
+	padding: 0;
+	list-style: none;
 
-  display: flex;
-  flex-direction: row;
+	display: flex;
+	flex-direction: row;
 }
 
 .nav__item {
-  font-size: 0.8rem;
-  margin: 0.4rem;
+	font-size: 0.8rem;
+	margin: 0.4rem;
 }
 
 .nav__link {
-  color: #fff;
-  text-decoration: none;
-  text-transform: uppercase;
+	color: #fff;
+	text-decoration: none;
+	text-transform: uppercase;
 }
 
 .nav__link--button {
-  background: #fff;
-  color: #136c72;
-  padding: 0.25em 1em;
-  border-radius: 10em;
+	background: #fff;
+	color: #136c72;
+	padding: 0.25em 1em;
+	border-radius: 10em;
 }
 
 .nav__link:hover {
-  opacity: 0.75;
+	opacity: 0.75;
 }
 
 .hero {
-  padding: 100px 0;
-  background-color: #23424a;
-  color: #fff;
+	padding: 100px 0;
+	background-color: #23424a;
+	color: #fff;
 }
 
 .hero__text {
-  width: 62%;
+	width: 62%;
 }
 
 .hero__img {
-  width: 32%;
-  align-self: flex-start;
+	width: 32%;
+	align-self: flex-start;
 }
 
 .hero p {
-  margin-bottom: 3em;
+	margin-bottom: 3em;
 }
 
 .main {
-  margin-top: 3em;
+	margin-top: 3em;
 }
 
 .primary-content {
-  width: 62%;
+	width: 62%;
 }
 
 .sidebar {
-  width: 32%;
-  padding: 1em;
-  text-align: center;
-  color: #fff;
-  background-color: #136c72;
+	width: 32%;
+	padding: 1em;
+	text-align: center;
+	color: #fff;
+	background-color: #136c72;
 }
