--- a/grid-portfolio-site-kevin/scss/modules/_mixins.scss
+++ b/grid-portfolio-site-kevin/scss/modules/_mixins.scss
@@ -1,14 +1,20 @@
 @mixin container($width: 90%, $max-width: 50em) {
-    width: $width;
-    margin: 0 auto;
-    max-width: $max-width;
+	width: $width;
+	margin: 0 auto;
+	max-width: $max-width;
 }
 
-
 @mixin clearfix {
-    &::after {
-        content: '';
-        display: block;
-        clear: both;
-    }
+	&::after {
+		content: '';
+		display: block;
+		clear: both;
+	}
+}
+
+@mixin mq($width: 50em) {
+	// FYI: 50 * 16px = 800px
+	@media (min-width: $width) {
+		@content;
+	}
 }
