--- a/grid-portfolio-site-kevin/scss/partials/_base.scss
+++ b/grid-portfolio-site-kevin/scss/partials/_base.scss
@@ -5,6 +5,14 @@ body {
 	line-height: 1.6;
 	background: $white;
 	font-size: 0.875rem;
+
+	// @media (min-width: 50em) {
+	// 	font-size: 1.125em;
+	// }
+
+	@include mq {
+		font-size: 1.125em;
+	}
 }
 
 h1,
@@ -18,10 +26,17 @@ h1 {
 	color: $accent;
 	line-height: 1;
 	font-size: 3.125rem;
+
+	@include mq {
+		font-size: 4.25rem;
+	}
 }
 
 h2 {
 	@include sans-serif($fs: 2rem);
+	@include mq {
+		font-size: 3rem;
+	}
 }
 
 img {
