--- a/grid-portfolio-site-kevin/scss/partials/_portfolio.scss
+++ b/grid-portfolio-site-kevin/scss/partials/_portfolio.scss
@@ -74,8 +74,12 @@
 @supports (display: grid) {
 	.portfolio-items {
 		display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-gap: 1em;
+		grid-template-columns: repeat(auto-fit, minmax(10em, 1fr));
+		grid-gap: 1em;
+
+		@include mq {
+			grid-template-columns: repeat(4, 1fr);
+		}
 	}
 	.portfolio-item.featured {
 		grid-column: 1 / span 2;
