--- a/grid-portfolio-site-kevin/scss/partials/_welcome.scss
+++ b/grid-portfolio-site-kevin/scss/partials/_welcome.scss
@@ -16,9 +16,17 @@
 		text-align: center;
 		line-height: 2;
 
+		@include mq {
+			font-size: 3vw;
+		}
+
 		span {
 			@include sans-serif($fs: 5.5rem, $color: $accent);
 			display: block;
+
+			@include mq {
+				font-size: 10vw;
+			}
 		}
 
 		&::before,
