--- a/grid-portfolio-site-kevin/scss/partials/_base.scss
+++ b/grid-portfolio-site-kevin/scss/partials/_base.scss
@@ -5,6 +5,7 @@ body {
 	line-height: 1.6;
 	background: $white;
 	font-size: 0.875rem;
+	overflow-x: hidden;
 
 	// @media (min-width: 50em) {
 	// 	font-size: 1.125em;
