--- a/grid-portfolio-site-kevin/scss/partials/_portfolio.scss
+++ b/grid-portfolio-site-kevin/scss/partials/_portfolio.scss
@@ -100,18 +100,26 @@
 	box-shadow: 0 0 0 5em rgba(black, 0.5);
 	overflow-y: scroll;
 	overflow-x: hidden;
+	display: none;
+}
+
+.is-open {
+	display: block;
 }
 
 .portfolio-header {
 	text-align: left;
 	padding: 5em 0em;
 	margin-bottom: 2em;
-}
-
-.portfolio-header:nth-of-type(1) {
-	background-image: url(../img/portfolio-01.jpg);
 	background-size: cover;
 	background-position: center;
+}
+
+.header-one {
+	background-image: url(../img/portfolio-01.jpg);
+}
+.header-two {
+	background-image: url(../img/portfolio-02.jpg);
 }
 
 .portfolio-title-box {
@@ -179,4 +187,22 @@
 	border-radius: 50%;
 	cursor: pointer;
 	box-shadow: 0 0 5px rgba(black, 0.5);
+}
+
+@keyframes modalIn {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+
+@keyframes modalOut {
+	0% {
+		opacity: 1;
+	}
+	100% {
+		opacity: 0;
+	}
 }
